# DesertApocalypse

./: .gitignore  CMakeLists.txt  README.md
code/assets/shaders/: desert.frag  desert.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
code/include/: animate.h  animator.h  callbacks.h  camera.h  glm_compat.h  hierarchy_utils.h  mesh_loader.h  model_render.h  renderer.h  scene_manager.h  shader_uniform.h  shader_utils.h  skybox.h  terrain_loader.h  terrain_manager.h  texture_loader.h  transform_utils.h
code/src/: callbacks.cpp  main.cpp  renderer.cpp  shader_utils.cpp  texture_loader.cpp
code/src/env_manager/: skybox.cpp  terrain_loader.cpp  terrain_manager.cpp
code/src/render_utils/: animate.cpp  animator.cpp  hierarchy_utils.cpp  mesh_loader.cpp  model_render.cpp  scene_manager.cpp  shader_uniform.cpp  transform_utils.cpp
scripts/: build.sh  run.sh
